--- a/src/app/shared/components/inputs/inputs.css
+++ b/src/app/shared/components/inputs/inputs.css
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: row;
   margin-bottom: 10px;
-  flex-wrap: wrap; /* para que los elementos puedan bajar si no caben */
+  flex-wrap: wrap; 
   justify-content: center;
 }
 
@@ -148,7 +148,7 @@ button[disabled]:hover,
 
   input[type="text"],
   button {
-    width: 60vw; /* 60% del ancho de pantalla */
+    width: 60vw; 
     max-width: 300px;
     height: 70px;
     font-size: 2rem;
@@ -164,15 +164,21 @@ button[disabled]:hover,
 @media (max-width: 400px) {
   input[type="text"],
   button {
-    width: 80vw;
+    width: 10vw;
     max-width: none;
     height: 60px;
-    font-size: 1.8rem;
+    font-size: 0.5rem;
     margin: 6px 0;
   }
 
   .next-level-btn {
     height: 45px;
     font-size: 1rem;
+  }
+
+  .level-display{
+    height: 40px;
+    font-size: 1rem;
+   
   }
 }
