--- a/src/app/shared/components/inputs/inputs.css
+++ b/src/app/shared/components/inputs/inputs.css
@@ -140,7 +140,7 @@ button[disabled]:hover,
 
 /* MEDIA QUERIES PARA RESPONSIVE */
 
-@media (max-width: 768px) {
+@media (max-width: 834px) {
   .forms {
     flex-direction: column;
     align-items: center;
@@ -148,10 +148,10 @@ button[disabled]:hover,
 
   input[type="text"],
   button {
-    width: 60vw; 
-    max-width: 300px;
-    height: 70px;
-    font-size: 2rem;
+    width: 10vw; 
+    max-width: none;
+    height: 50px;
+    font-size: 0.9rem;
     margin: 8px 0;
   }
 
@@ -161,14 +161,17 @@ button[disabled]:hover,
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   input[type="text"],
   button {
     width: 10vw;
     max-width: none;
-    height: 60px;
-    font-size: 0.5rem;
+    height: 45px;
     margin: 6px 0;
+  }
+
+  button {
+    font-size: 0.5rem;
   }
 
   .next-level-btn {
